@@ -24,6 +24,13 @@ echo ">>>>"
 
 # Launch a GLB program
 MAINPRGM= java -cp "../target/*" \
+        --add-modules java.se \
+        --add-exports java.base/jdk.internal.ref=ALL-UNNAMED \
+        --add-opens java.base/java.lang=ALL-UNNAMED \
+        --add-opens java.base/java.nio=ALL-UNNAMED \
+        --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
+        --add-opens java.management/sun.management=ALL-UNNAMED \
+        --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED \
         -Dapgas.verbose.launcher=true \
         -Dapgas.places=4 \
         -Dapgas.threads=8 \
@@ -39,11 +46,11 @@ MAINPRGM= java -cp "../target/*" \
 
 sleep 15
 echo "##### INITIATING MALLEABLE GROWTH #####"
-java -cp "../target/*" apgas.testing.MalleableOrder expand 2 $HOSTNAME $HOSTNAME
+java -cp "../target/*" apgas.impl.elastic.MalleableOrder grow 2 $HOSTNAME $HOSTNAME
 
 echo "##### INITIATING MALLEABLE SHRINK #####"
 sleep 10
-java -cp "../target/*" apgas.testing.MalleableOrder shrink 1
+java -cp "../target/*" apgas.impl.elastic.MalleableOrder shrink 1
 
 wait $MAINPRGM
 
